# project-chats

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: auto-move.md  chatgpt-business-workflow.md  gui.md  install.md  publish-github.md
examples/: normalized_chats.json
project_chats/: __init__.py  browser_move.py  chatgpt_api.py  cli.py  core.py  gui.py
scripts/: install.py  run-cli.py  run-gui.py
tests/: test_smoke.py
